# Photon

./: .gitignore  DOCUMENTATION.md  NOTICE  README.md  index.html  package-lock.json  package.json  tsconfig.json  workflow.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/target-llm/: .rustc_info.json
src-tauri/target-llm/debug/.fingerprint/ab_glyph_rasterizer-43a882497e1b3365/: lib-ab_glyph_rasterizer  lib-ab_glyph_rasterizer.json
src-tauri/target-llm/debug/.fingerprint/adler2-de33734fda776200/: lib-adler2  lib-adler2.json
src-tauri/target-llm/debug/.fingerprint/aho-corasick-6b9f2dd1abb4f6d5/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-llm/debug/.fingerprint/aho-corasick-ff5ae663276ef668/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-llm/debug/.fingerprint/alloc-no-stdlib-045b524beaf83f37/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-llm/debug/.fingerprint/alloc-no-stdlib-8fcb1e2f248b3b7c/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-llm/debug/.fingerprint/alloc-stdlib-1a6c4cae0dd0e9a0/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-llm/debug/.fingerprint/alloc-stdlib-3de8c0e798d66206/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-llm/debug/.fingerprint/anyhow-6c9f42bbb9d233fa/: lib-anyhow  lib-anyhow.json
src-tauri/target-llm/debug/.fingerprint/anyhow-92f29a13742d64a0/: lib-anyhow  lib-anyhow.json
src-tauri/target-llm/debug/.fingerprint/approx-4d0ed63c6ab1a2d7/: lib-approx  lib-approx.json
(+1104 files in other folders)
